tests/Rules/Forms/Fixtures/invalid/input_missing_autocomplete.html.twig
{# 1 errors #}
<form>
  <input type="email" name="email">
</form>
